--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,18 @@ img {
   height: 100px;
 }
 
+button[type="button1"]{
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 10px;
+  font-size: 13px;
+}
+
+button[type="button2"]{
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 10px;
+  font-size: 13px;
+}
+
 input[type="text"],
 input[type="password"] {
   height: 25px;
@@ -52,7 +64,7 @@ input[type="submit"]:hover {
 
 .error {
   color: red;
-  font-size: 12px;
+  font-size: 13px;
 }
 
 .title {
@@ -66,4 +78,3 @@ input[type="submit"]:hover {
   gap: 8px;
   margin: 10px;
 }
-
